[gd_scene load_steps=7 format=2]

[ext_resource path="res://Blob.gd" type="Script" id=1]
[ext_resource path="res://Assets/GreenBlob.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="Animation" id=2]
resource_name = "Blob"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "jump"
}, {
"args": [  ],
"method": "fall"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Blob2"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 26.0

[node name="Blob" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Blob = SubResource( 2 )
anims/Blob2 = SubResource( 3 )

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( -25.695, -0.875961 )
enabled = true
cast_to = Vector2( 0, 77 )
collision_mask = 4

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 25.0487, -0.875961 )
enabled = true
cast_to = Vector2( 0, 77 )
collision_mask = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -4 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
